/*
 * Copyright (c) 2020 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package toasttab.protokt.v1.testing.options;

import "protokt/v1/protokt.proto";

option java_package = "com.toasttab.protokt.v1.testing.options";

message PrimitiveWrappedTypes {
  bytes bytes = 1 [
    (.protokt.v1.property).wrap = "ByteArrayBox"
  ];

  bool bool = 2 [
    (.protokt.v1.property).wrap = "BoolBox"
  ];

  double double = 3 [
    (.protokt.v1.property).wrap = "DoubleBox"
  ];

  fixed32 fixed32 = 4 [
    (.protokt.v1.property).wrap = "UIntBox"
  ];

  fixed64 fixed64 = 5 [
    (.protokt.v1.property).wrap = "ULongBox"
  ];

  float float = 6 [
    (.protokt.v1.property).wrap = "FloatBox"
  ];

  int32 int32 = 7 [
    (.protokt.v1.property).wrap = "IntBox"
  ];

  int64 int64 = 8 [
    (.protokt.v1.property).wrap = "LongBox"
  ];

  sfixed32 sfixed32 = 9 [
    (.protokt.v1.property).wrap = "IntBox"
  ];

  sfixed64 sfixed64 = 10 [
    (.protokt.v1.property).wrap = "LongBox"
  ];

  sint32 sint32 = 11 [
    (.protokt.v1.property).wrap = "IntBox"
  ];

  sint64 sint64 = 12 [
    (.protokt.v1.property).wrap = "LongBox"
  ];

  string string = 13 [
    (.protokt.v1.property).wrap = "StringBox"
  ];

  uint32 uint32 = 14 [
    (.protokt.v1.property).wrap = "UIntBox"
  ];

  uint64 uint64 = 15 [
    (.protokt.v1.property).wrap = "ULongBox"
  ];
}
